fix placeholder contrast

--- a/theme/github.less
+++ b/theme/github.less
@@ -270,6 +270,22 @@
 
         input {
             height: 3rem;
+
+            &::-webkit-input-placeholder {
+                color: var(--pxt-neutral-alpha50);
+            }
+
+            &:-moz-placeholder {
+                color: var(--pxt-neutral-alpha50);
+            }
+
+            &::-moz-placeholder {
+                color: var(--pxt-neutral-alpha50);
+            }
+
+            &::-ms-input-placeholder {
+                color: var(--pxt-neutral-alpha50);
+            }
         }
     }
 }
